6.Kubernetes-Ingress/diff-Service-LB_with_Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx   # It tells the cluster which Ingress Controller will handle this Ingress.
                                         # nginx means → use the Nginx Ingress Controller.
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /web
        pathType: Prefix  # Means: Any URL that starts with /web (like /web, /web/home) will match this rule.
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5678


# Overall: 1.When someone goes to http://myapp.local/web, send their request to a specific Service like frontend Service.
#          2.When someone goes to http://myapp.local/api, send their request to a specific Service like backend Service.
# http://myapp.local/web → frontend-service:80 → frontend Pods
# http://myapp.local/api → backend-service:5678 → backend Pods
